--- a/webcardediter/cardediter/templates/cardediter/profiles/login.html
+++ b/webcardediter/cardediter/templates/cardediter/profiles/login.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    Чтобы пользоваться сайтом, необходимо авторизоваться
     <form action="" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="submit">
     </form>
-    {% debug %}
 </body>
 </html>
