--- a/webcardediter/cardediter/templates/cardediter/profiles/registration.html
+++ b/webcardediter/cardediter/templates/cardediter/profiles/registration.html
@@ -7,14 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    {% if not user.is_authenticated %}
     <form action="" method="post">
         {% csrf_token %}
         {% for field in form %}
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {{ field }}
+        {{ field.errors }}
+        {{ field.label_tag }}
+        {{ field }}
         {% endfor %}
         <input type="submit" value="submit">
     </form>
+    {% else %}
+        Чтобы зарегестрировать новго пользователя, нужно выйти из аккаунта "{{ user }}"
+        <div>
+            <a href="{% url 'logout' %}">Выйти</a>
+        </div>
+    {% endif %}
 </body>
 </html>
