--- a/webcardediter/cardediter/templates/cardediter/upload_image.html
+++ b/webcardediter/cardediter/templates/cardediter/upload_image.html
@@ -11,21 +11,15 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {% for field in form %}
         <div class="form-control">
-            {{ field.label_tag }}
-            <label for="{{ field.id_for_label }}"></label>
-                {% for item in field %}
-                <div>
-                    {{ item }}
-                </div>
-                {% endfor %}
-            {{ field.errors }}
+            {{form}}
+            <!-- {{form.image.errors}}
+            {{form.image.label_tag}}
+            {{ form.image }} -->
         </div>
-        {% endfor %}
-        <input type="submit" value="Выбрать шаблон">
+        <input type="submit" value="Подтвердить">
     </form>
 </body>
 </html>
